LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/GM_EMP_BANK__x.object-meta.xml
<CustomObject>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_EMP_BANK</externalName>
    <label>GM_EMP_BANK</label>
    <pluralLabel>GM_EMP_BANK</pluralLabel>
</CustomObject>