LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/ACC_TYPE__c.field-meta.xml
<CustomField>
    <fullName>ACC_TYPE__c</fullName>
    <description>ACC_TYPE</description>
    <externalDeveloperName>ACC_TYPE</externalDeveloperName>
    <label>ACC_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>