LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/ACCOUNT_NAME__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_NAME__c</fullName>
    <description>ACCOUNT_NAME</description>
    <externalDeveloperName>ACCOUNT_NAME</externalDeveloperName>
    <label>ACCOUNT_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>