LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/ACCOUNT_NO__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_NO__c</fullName>
    <description>ACCOUNT_NO</description>
    <externalDeveloperName>ACCOUNT_NO</externalDeveloperName>
    <label>ACCOUNT_NO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>