LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>AMOUNT__c</fullName>
    <description>AMOUNT</description>
    <externalDeveloperName>AMOUNT</externalDeveloperName>
    <label>AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>