LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/APPROVAL_DATE__c.field-meta.xml
<CustomField>
    <fullName>APPROVAL_DATE__c</fullName>
    <description>APPROVAL_DATE</description>
    <externalDeveloperName>APPROVAL_DATE</externalDeveloperName>
    <label>APPROVAL_DATE</label>
    <type>DateTime</type>
</CustomField>