LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/BANK_ADDRESS__c.field-meta.xml
<CustomField>
    <fullName>BANK_ADDRESS__c</fullName>
    <description>BANK_ADDRESS</description>
    <externalDeveloperName>BANK_ADDRESS</externalDeveloperName>
    <label>BANK_ADDRESS</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>