LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/BANK_NAME__c.field-meta.xml
<CustomField>
    <fullName>BANK_NAME__c</fullName>
    <description>BANK_NAME</description>
    <externalDeveloperName>BANK_NAME</externalDeveloperName>
    <label>BANK_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>