LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/BENIFIACIARY_NAME__c.field-meta.xml
<CustomField>
    <fullName>BENIFIACIARY_NAME__c</fullName>
    <description>BENIFIACIARY_NAME</description>
    <externalDeveloperName>BENIFIACIARY_NAME</externalDeveloperName>
    <label>BENIFIACIARY_NAME</label>
    <length>150</length>
    <type>Text</type>
</CustomField>