LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/BRANCH_NAME__c.field-meta.xml
<CustomField>
    <fullName>BRANCH_NAME__c</fullName>
    <description>BRANCH_NAME</description>
    <externalDeveloperName>BRANCH_NAME</externalDeveloperName>
    <label>BRANCH_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>