LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/DOCUMENT__c.field-meta.xml
<CustomField>
    <fullName>DOCUMENT__c</fullName>
    <description>DOCUMENT</description>
    <externalDeveloperName>DOCUMENT</externalDeveloperName>
    <label>DOCUMENT</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>