LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/DOCUMENT_NAME__c.field-meta.xml
<CustomField>
    <fullName>DOCUMENT_NAME__c</fullName>
    <description>DOCUMENT_NAME</description>
    <externalDeveloperName>DOCUMENT_NAME</externalDeveloperName>
    <label>DOCUMENT_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>