LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/NATURE__c.field-meta.xml
<CustomField>
    <fullName>NATURE__c</fullName>
    <description>NATURE</description>
    <externalDeveloperName>NATURE</externalDeveloperName>
    <label>NATURE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>