LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/SWIFT_CODE__c.field-meta.xml
<CustomField>
    <fullName>SWIFT_CODE__c</fullName>
    <description>SWIFT_CODE</description>
    <externalDeveloperName>SWIFT_CODE</externalDeveloperName>
    <label>SWIFT_CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>