LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP_BANK__x/fields/USER_UP__c.field-meta.xml
<CustomField>
    <fullName>USER_UP__c</fullName>
    <description>USER_UP</description>
    <externalDeveloperName>USER_UP</externalDeveloperName>
    <label>USER_UP</label>
    <length>8</length>
    <type>Text</type>
</CustomField>